<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/motion_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">


    <TextView
        android:id="@+id/file_name"
        style="@style/details_text_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/radial_margin"
        android:text="@string/file_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status_ver"
        style="@style/details_text_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/status"
        app:layout_constraintEnd_toEndOf="@+id/file_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/file_name"
        app:layout_constraintTop_toBottomOf="@+id/file_name" />

    <TextView
        android:id="@+id/file"
        style="@style/details_text_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="@dimen/distance_in_detail_content"
        android:layout_marginEnd="@dimen/distance_in_detail_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/file_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/file_name"
        app:layout_constraintTop_toTopOf="@+id/file_name"
        tools:text="@string/glide_string" />

    <TextView
        android:id="@+id/status"
        style="@style/details_text_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/status_ver"
        app:layout_constraintStart_toStartOf="@+id/file"
        app:layout_constraintTop_toTopOf="@+id/status_ver"
        tools:text="@string/success" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/detail_text_size"
        android:layout_marginEnd="@dimen/detail_text_size"
        android:layout_marginBottom="@dimen/overall_margin"
        android:text="@string/button_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.motion.widget.MotionLayout>