<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/download"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_download_height"
        app:srcCompat="@drawable/ic_download"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf ="parent"
        android:contentDescription="@string/download_image_description" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/download">

        <RadioButton
            android:id="@+id/loadapp_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadapp_string"
            style="@style/radio_strings_settings"
            android:layout_marginTop="@dimen/radial_vertical_margin"
            android:layout_marginEnd="@dimen/radial_horizontal_margin"
            android:layout_marginStart="@dimen/radial_horizontal_margin"
            />

        <RadioButton
            android:id="@+id/glide_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/radio_strings_settings"
            android:text="@string/glide_string"
            android:layout_marginStart="@dimen/radial_horizontal_margin"
            android:layout_marginEnd="@dimen/radial_horizontal_margin"
            android:layout_marginTop="@dimen/radial_vertical_margin" />

        <RadioButton
            android:id="@+id/retrofit_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/radio_strings_settings"
            android:text="@string/retrofit_string"
            android:layout_marginTop="@dimen/radial_vertical_margin"
            android:layout_marginStart="@dimen/radial_horizontal_margin"
            android:layout_marginEnd="@dimen/radial_horizontal_margin"
            android:layout_marginBottom="@dimen/radial_horizontal_margin"/>
    </RadioGroup>
    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:backgroundColor="@color/colorPrimary"
        app:buttonCircleColor="@color/colorAccent"
        app:textColor="@color/black"
        app:loadingColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group" />

</androidx.constraintlayout.widget.ConstraintLayout>